@@ -494,6 +494,8 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
     - src/x2goutils.{cpp,h}: make find_binary () and add_to_path () available
       on all UNIX-based operating systems. We will need it for sftp-server
       discovery.
+    - src/pulsemanager.cpp: refactor PA binary searching code. Less
+      duplication now.
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
